<resources>
    <string name="app_name">Smart-HR</string>
    <string name="copied">cpoied</string>
    <string name="login">Sign In</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait</string>
    <string name="password">Password</string>
    <string name="email_address">Email</string>
    <string name="employees">Employees</string>
    <string name="back">Back</string>
    <string name="notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_your_email_to_reset_your_password">Enter your email to reset your password:</string>
    <string name="request">Request</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="add_user">Add User</string>
    <string name="view_profile">View Profile</string>

    <string-array name="menu_titles">
        <item>Dashbord</item>
        <item>My Account</item>
        <item>Users</item>
        <item>FB Devices</item>
        <item>Vacations</item>
        <item>Positions</item>
        <item>Departments</item>
        <item>Branches</item>
        <item>Logout</item>
    </string-array>

    <string-array name="menu_titles2">
        <item>Show All Users</item>
        <item>Add New User</item>
    </string-array>

    <string-array name="menu_titles_d">
        <item>Show All Devices</item>
        <item>Add New Device</item>
    </string-array>

    <string-array name="menu_titles_position">
        <item>Show All Positions</item>
        <item>Add New Positions</item>
    </string-array>


    <string-array name="menu_titles_departments">
        <item>Show All Departments</item>
        <item>Add New Departments</item>
    </string-array>

    <string-array name="menu_titles_branches">
        <item>Show All Branches</item>
        <item>Add New Branch</item>
    </string-array>

    <string-array name="menu_titles_vac">
        <item>Show All Vacations</item>
        <item>Add New Vacation</item>
        <item>Vacation requests</item>
    </string-array>


    <string-array name="menu_titlesforuser">
        <item>OverView</item>
        <item>Tasks</item>
        <item>Logout</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="createnewuser">Create New User</string>
    <string name="this_field_is_required">This field is required.</string>
    <string name="valiedemail">Please enter a valid Email.</string>
    <string name="valiedpassword">Please enter a valid Password.</string>
    <string name="domain">http://www.erpsmarttech.com/</string>
    <string name="errorserver">error in server</string>
    <string name="jobinfo">Job Informations</string>
    <string name="user_info">User Info :</string>
    <string name="avatar">Avatar</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="user_role">User Role</string>
    <string name="admin">Admin</string>
    <string name="hr">HR</string>
    <string name="user">User</string>
    <string name="hiring_date">Hiring Date</string>
    <string name="company_branch">Company Branch</string>
    <string name="department">Department</string>
    <string name="job_title">Job Title</string>
    <string name="userd_shift">Userd Shift</string>
    <string name="salary">Salary</string>
    <string name="new_password">New Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="aresurelogout">are you sure to logout from your account</string>
    <string name="sound">sound in App</string>
    <string name="view_details">View Details</string>
    <string name="lastupdate">Last Update</string>
    <string name="devices">Fp Devices</string>
    <string name="export">Export</string>
    <string name="shutdown">Shutdown</string>
    <string name="device_info">Device Info :</string>
    <string name="device_name">Device Name</string>
    <string name="ip_address">Ip Address</string>
    <string name="submit">Submit</string>
    <string name="serial">Serial</string>
    <string name="cancelled">Cancelled!</string>
    <string name="are_you_sure">Are you sure to delete </string>
    <string name="no_cancel">No,cancel !</string>
    <string name="yes_delete">Yes,delete it!</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="errorconn">error in connection</string>
    <string name="vacations">Vacations</string>
    <string name="ratio">Ratio</string>
    <string name="postions_has_vac">positions</string>
    <string name="positions">Positions</string>
    <string name="departments">Departments</string>
    <string name="branches">Branches</string>
    <string name="average_salary">Average Salary : </string>
    <string name="due_day">Due Day : </string>
    <string name="phone_number">Phone Number</string>
    <string name="vacation_info">Vacation Info</string>
    <string name="name">Name</string>
    <string name="default_data">Default Data</string>
    <string name="days">Days</string>
    <string name="minimum_1_day_and_maximum_360_days">minimum 1 Day And maximum 360 Days.</string>
    <string name="paid_vacation">Paid Vacation</string>
    <string name="unpaid_vacation">Unpaid Vacation</string>
    <string name="vacation_type">Vacation Type</string>
    <string name="deduct_ratio">Deduct Ratio</string>
    <string name="branch_info">Branch Info</string>
    <string name="department_info">Department Info</string>
    <string name="error_require">this field is require</string>

</resources>
