<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        android:iconTint="@android:color/darker_gray"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,UnusedAttribute" />


    <item android:title="@string/export"
        android:icon="@drawable/ic_export"
        android:iconTint="@android:color/darker_gray"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute" />

    <item android:title="@string/shutdown"
        android:icon="@drawable/ic_poweroff"
        android:iconTint="@android:color/darker_gray"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute" />

    <item android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        android:iconTint="@android:color/darker_gray"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute" />

</menu>