<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVacationActivity"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_5sdp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacation_info"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/pop_bold"/>

        <!-- name-->
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="ltr"
            android:layout_marginHorizontal="@dimen/_2sdp"
            >



            <TextView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/pop_extra_light_italic"
                android:text="@string/name"
                android:textAlignment="center"

                />

            <EditText
                android:id="@+id/add_vac_ename"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_stroke"
                android:padding="@dimen/_6sdp"
                android:inputType="textNoSuggestions"
                />


        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_data"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/pop_bold"/>

        <!-- datys-->
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="ltr"
            android:layout_marginHorizontal="@dimen/_2sdp"
            >



            <TextView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/pop_extra_light_italic"
                android:text="@string/days"
                android:textAlignment="center"

                />

            <EditText
                android:id="@+id/add_vac_eDays"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_stroke"
                android:padding="@dimen/_6sdp"
                android:inputType="number"
                />


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/pop_extra_light_italic"
            android:text="@string/minimum_1_day_and_maximum_360_days"
            android:textAlignment="center"

            />

        <!-- types-->
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="ltr"
            android:layout_marginHorizontal="@dimen/_2sdp"
            >



            <TextView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/pop_extra_light_italic"
                android:text="@string/vacation_type"
                android:textAlignment="center"
                android:layout_gravity="center"

                />

            <RadioGroup
                android:id="@+id/add_vac_radioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_6sdp"
                android:orientation="horizontal"
                android:layoutDirection="ltr"

               >
                <RadioButton
                    android:id="@+id/add_vac_r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paid_vacation"
                    android:buttonTint="@color/colorPrimary"

                    />

                <RadioButton
                    android:id="@+id/add_vac_r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unpaid_vacation"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"

                    />

            </RadioGroup>


        </LinearLayout>

        <!-- ratio-->
        <LinearLayout
            android:id="@+id/add_vac_ratioLayout"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="ltr"
            android:layout_marginHorizontal="@dimen/_2sdp"
            >



            <TextView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/pop_extra_light_italic"
                android:text="@string/deduct_ratio"
                android:textAlignment="center"

                />


          <RelativeLayout
              android:layout_width="wrap_content"
              android:layout_height="fill_parent"
              android:background="@color/hollowcustom2"
              >

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/_10sdp"
                  android:textColor="@android:color/black"
                  android:text="%"
                  android:paddingHorizontal="@dimen/_5sdp"
                  android:textAlignment="center"
                  android:layout_centerInParent="true"

                  />
          </RelativeLayout>

            <EditText
                android:id="@+id/add_vac_eRatio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_stroke"
                android:padding="@dimen/_6sdp"
                android:inputType="number"
                />


        </LinearLayout>


        <Button
            android:id="@+id/add_vac_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle1"
            android:backgroundTint="@color/custom4"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:fontFamily="@font/pop_bold"
            android:textAllCaps="false"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>